# neural-network

./: CMakeLists.txt  README.md  main.cpp  neural-network.kdev4  snn.cpp  snn.h  test.sh
header/: app.hpp  mnist.hpp  sclt.hpp  snn.hpp  sts.hpp
mnist/: mnist.cpp  mnist.h
source/: app.cpp  main.cpp  mnist.cpp  sclt.cpp  snn.cpp  sts.cpp
tests/: mnist.sh  server.sh  simple.sh
